still attempting to fix formatting on mobile, playing around with how the css handles the paragraph functionality

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ p {
     margin: 20px 0; 
 }
 
-
 .divider {
     display: flex;
     align-items: center; 
@@ -89,7 +88,7 @@ p {
     display: block; 
 }
 
-.introductionp{
+.introductionp {
     align-items: center;
     margin-left: 200px;
     margin-right: 200px;
@@ -204,11 +203,10 @@ html {
         width: 40px;
     }
 
-    
     p {
-        text-align: left; 
+        text-align: center; 
         margin: 0 auto; 
         max-width: 90%; 
-        line-height: 1.5;
+        line-height: 1.5; 
     }
 }
